# Docs-Navigator

./: .env  .gitignore  GETTING_STARTED.md  README.md  app.py  app_enhanced.py  app_gradio.py  client_agent.py  document_intelligence.py  enhanced_ocr_processor.py  install_tesseract.bat  lightweight_server.py  ocr_processor.py  pyproject.toml  requirements.txt  server_docs.py  setup_ocr.py
docs/: PDF_TESTING_README.md  overview.md  prompting-guidelines.md  troubleshooting.md
docs/guides/: FIXES_APPLIED.md  INTELLIGENT_TOOLS_GUIDE.md  OCR_SETUP.md  OCR_TESTING_GUIDE.md  PDF_TESTING_README.md  UI_ENHANCEMENT_GUIDE.md
docs/text/: README.md  auroraai_report.txt  auroraai_technical_specs.xlsx  configuration.md  organization_example.md  overview.md  prompting-guidelines.md  setup.md
docs_navigator_mcp.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py
src/agent/: client.py
src/docs_navigator_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/server/: __init__.py  server.py
src/ui/: app.py  enhanced.py  showcase.py
tests/: test_anthropic.py  test_app_status.py  test_complete.py  test_end_to_end.py  test_end_to_end_pdf.py  test_enhanced.py  test_enhanced_ocr.py  test_fixed_summarization.py  test_image_description.py  test_image_processing.py  test_intelligent_tools.py  test_mcp.py  test_mcp_pdf.py  test_ocr.py  test_pdf_discovery.py  test_pdf_support.py  test_quick.py  test_quick_response.py  test_simple_image.py  verify_pdf.py
